# BatikCraftStudio

./: .gitignore  CHANGELOG_0.4.2.md  CHANGELOG_0.4.3.md  CHANGELOG_0.4.4.md  CHANGELOG_0.4.5.md  CHANGELOG_0.4.6.md  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/: release-request.json
.github/workflows/: build-desktop.yml  ci.yml
docs/: AI_NFT_MARKETPLACE_AUDIT.md  ARCHITECTURE.md  BATIKBREW_SDXL_GENERATION.md  BATIKCRAFT_NFT_FORMAT.md  BOB_DEVELOPMENT_LOG.md  BOB_PROMPTS.md  CLOUD_AI_PROVIDERS.md  DESKTOP_BUILDS.md  EFFICIENCY_REFACTOR.md  FINALIZE  ICON_ASSET_FIX.md  KAGGLE_BATIKBREW_SDXL_STYLE_LORA.md  KAGGLE_BATIK_STYLE_ANY_OBJECT.md  LAYER_EDITOR.md  MILESTONE_2A_ACCEPTANCE.md  MILESTONE_3A_PAINT_LAYER.md  MILESTONE_3B_BRUSH_REFINEMENT.md  MILESTONE_3C_SHAPE_TOOLS.md  MILESTONE_3D1_MOTIF_POKOK.md  MILESTONE_3D_CAP_ISEN.md  MILESTONE_3E_OBJECT_TREE_ASSETS.md  MILESTONE_3F_ASSET_LIBRARY.md  MILESTONE_3G_KAGGLE_ASSET_BUILDER.md  MILESTONE_4A_STRUCTURED_BATIFICATION.md  MILESTONE_4B_OFFLINE_LORA.md  MILESTONE_4C_MULTI_OBJECT_SELECTION.md  MILESTONE_4D_PROCESS_FOUNDATIONS.md  MILESTONE_4E_RULERS_LAYER_CONTAINERS.md  MILESTONE_4F_VIEWPORT_GRID_CONTEXT.md  NO_MORE_MARKERS.md  PROJECT_DOMAIN.md  PROJECT_DOMAIN_DECISIONS.md  PROJECT_DOMAIN_EXAMPLE.py  PROJECT_FORMAT.md  PR_READY.md  README.md  STOP  WORKSPACE_SHELL.md
notebooks/: kaggle_asset_pipeline.py  kaggle_batik_asset_pack_builder.ipynb  kaggle_outline_to_batikasset.ipynb  kaggle_train_batik_style_any_object.ipynb  kaggle_train_batikbrew_sdxl_style_lora.ipynb  kaggle_train_batikcraft_lora.ipynb  offline_lora_training_pipeline.py
packaging/: desktop_entry.py
scripts/: build_desktop.py  build_installer.py  repair_batikmodel.py  windows_installer_policy.py
src/batikcraft_studio/: __init__.py  __main__.py  app.py  app_icon.py  batikbrew_context_tool_app.py  clipboard_app.py  config.py  context_tool_app.py  dependency_bootstrap.py  dependency_bootstrap_v042.py  direct_style_app.py  i18n.py  integrated_market_app.py  logging_setup.py  managed_storage.py  model_transfer.py  multi_object_app.py  offline_ai_app.py  printing.py  process_app.py  progress.py  progress_context_tool_app.py  project_export.py  recent_projects.py  runtime_compatibility.py  runtime_model_process.py  structured_batification_app.py  viewport_app.py  web_bridge.py  web_bridge_extensions.py  windows_identity.py  workspace_translations.py
src/batikcraft_studio/ai/: __init__.py  batikbrew_generation.py  batikbrew_generation_modes.py  batikbrew_model_settings.py  cloud_generation.py  cuda_runtime_guard_v042.py  cuda_stability.py  dataset_pack.py  default_batik_reference.py  dependency_profiles.py  device_resolution.py  diffusers_inference_compat.py  gemini_generation.py  generation_providers.py  generation_trace.py  global_runtime.py  hybrid_batik_generation.py  local_lora_training.py  lora_activation_persistence.py  lora_object_batification.py  memory_guard.py  model_connectivity.py  model_family.py  model_pack.py  offline_runtime.py  pretrained_background.py  pretrained_batification.py  runtime_family_resolution.py  runtime_model_installer.py  runtime_settings.py  sdxl_online_component_repair.py  sdxl_repository_repair.py  sdxl_runtime_integrity.py  sdxl_text_component_repair.py  torch_runtime_integrity.py  torch_wheel_index.py
src/batikcraft_studio/application/: __init__.py  asset_edit_session.py  background_ai_session.py  batik_session.py  canvas_structure_session.py  clipboard_session.py  destructive_eraser_session.py  direct_style_session.py  external_image_session.py  gradient_session.py  hotfix_session.py  hotfix_session_v2.py  interactive_transform_session.py  motif_session.py  multi_object_session.py  non_ml_batification_session.py  object_session.py  offline_ai_session.py  outline_cleanup_session.py  paint_session.py  position_lock_session.py  pretrained_ai_batification_session.py  process_session.py  session.py  shape_session.py  structured_batification_session.py  viewport_session.py
src/batikcraft_studio/assets/: __init__.py  builder.py  library.py  personal_store.py  preview.py  progressive_install.py  raster_document_library.py
src/batikcraft_studio/domain/: __init__.py  batik_process.py  errors.py  models.py  project.py
src/batikcraft_studio/imaging/: __init__.py  affine_object.py  artwork_viewport_renderer.py  background_removal.py  batik_asset.py  brush_engine.py  cached_renderer.py  canvas_presets.py  cursor_guide.py  gradient.py  isen.py  live_bitmap_store.py  motif.py  non_ml_batification.py  outline_cleanup.py  paint.py  raster.py  raster_document.py  raster_fill.py  raster_insert.py  raster_layer.py  raster_stroke_layer.py  raster_viewport.py  renderer.py  safe_viewport_renderer.py  shape.py  stroke_object.py  structured_batification.py  tile_cache.py  undo_history.py  viewport_renderer.py
tests/: test_active_layer_routing.py  test_ai_batik_interior_variation_safety.py  test_ai_dependency_profiles.py  test_ai_menu_consolidation.py  test_ai_progress_feedback.py  test_any_object_batik_lora_notebook.py  test_app_icon.py  test_apply_stroke_to_image.py  test_asset_library.py  test_asset_nft_image_set_and_ai_clipboard.py  test_asset_pack_builder.py  test_asset_pack_studio.py  test_batik_asset.py  test_batik_palette_and_lora_ai.py  test_batik_process_foundations.py  test_batik_session.py  test_batikbrew_runtime_installer.py  test_batikbrew_sdxl_generation.py  test_batikbrew_sdxl_notebook.py  test_batikbrew_single_ornament_background.py  test_batikbrew_studio_window.py  test_batikcraft_nft_package.py  test_brush_alpha_viewport_hotfix.py  test_brush_engine.py  test_canvas_selection_semantics.py  test_canvas_structure.py  test_centralized_ai_settings.py  test_clipboard_ai_result.py  test_cloud_batik_generation_provider.py  test_cloud_generation_settings.py  test_config.py  test_context_tools.py  test_crash_prevention.py  test_cuda_runtime_release_v042.py  test_cuda_stability.py  test_decoded_asset_cache.py  test_dependency_bootstrap.py  test_dependency_center.py  test_desktop_build.py  test_device_resolution.py  (+102 more)
(+143 files in other folders)
