[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "batikcraft-studio"
version = "0.1.0"
description = "Native Tkinter studio for manual and AI-assisted batik motif creation."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Balya Rochmadi" }
]
dependencies = [
  "Pillow>=10.4"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]

[project.scripts]
batikcraft-studio = "batikcraft_studio.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 101
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E402", "F401", "I001"]
"src/batikcraft_studio/assets/library.py" = ["F401"]
"src/batikcraft_studio/domain/project.py" = ["E501"]
"src/batikcraft_studio/i18n.py" = ["E501"]
"src/batikcraft_studio/ui/compact_asset_editor.py" = ["E501"]
"src/batikcraft_studio/ui/object_tree_editor.py" = ["E501"]
"src/batikcraft_studio/ui/tool_windows.py" = ["E501"]
"src/batikcraft_studio/ui/wysiwyg_transform_editor.py" = ["E501", "F401"]
