[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "batikcraft-studio"
version = "0.1.0"
description = "Native Tkinter studio for manual and AI-assisted batik motif creation."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Balya Rochmadi" }
]
dependencies = [
  "Pillow>=10.4",
  "tkinterdnd2>=0.4.3,<1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]
ai = [
  "torch>=2.4",
  "diffusers>=0.39,<0.40",
  "transformers>=4.48,<5",
  "accelerate>=1.2",
  "huggingface-hub>=0.27",
  "peft>=0.17",
  "safetensors>=0.4",
  "numpy>=1.26,<3"
]

[project.scripts]
batikcraft-studio = "batikcraft_studio.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 101
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E401", "E402", "E501", "F401", "I001"]
"notebooks/kaggle_train_batik_style_any_object.ipynb" = ["E701", "E702", "B007"]
"src/batikcraft_studio/ai/batikbrew_generation.py" = ["E501", "F401"]
"src/batikcraft_studio/ai/batikbrew_generation_modes.py" = ["E501"]
"src/batikcraft_studio/ai/model_pack.py" = ["E501"]
"src/batikcraft_studio/ai/runtime_settings.py" = ["UP035"]
"src/batikcraft_studio/application/process_session.py" = ["E501"]
"src/batikcraft_studio/assets/library.py" = ["F401"]
"src/batikcraft_studio/domain/project.py" = ["E501"]
"src/batikcraft_studio/i18n.py" = ["E501"]
"src/batikcraft_studio/persistence/nft_package.py" = ["E501"]
"src/batikcraft_studio/ui/ai_batik_background_dialog.py" = ["E501"]
"src/batikcraft_studio/ui/ai_runtime_settings_dialog.py" = ["E501", "UP035"]
"src/batikcraft_studio/ui/batikbrew_output_mode_dialog.py" = ["E501"]
"src/batikcraft_studio/ui/compact_asset_editor.py" = ["E501"]
"src/batikcraft_studio/ui/object_tree_editor.py" = ["E501"]
"src/batikcraft_studio/ui/process_dialog.py" = ["E501"]
"src/batikcraft_studio/ui/tool_windows.py" = ["E501"]
"src/batikcraft_studio/ui/viewport_editor.py" = ["F401"]
"src/batikcraft_studio/ui/wysiwyg_transform_editor.py" = ["E501", "F401"]
"tests/test_batik_process_foundations.py" = ["E501", "I001"]
