[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "batikcraft-studio"
version = "0.5.1"
description = "Native Tkinter studio for manual and AI-assisted batik motif creation."
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "Balya Rochmadi" }
]
dependencies = [
  "Pillow>=10.4",
  "tkinterdnd2>=0.4.3,<1",
  "tqdm>=4.66,<5",
  "packaging>=24,<26"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5"
]
model-downloader = [
  "huggingface-hub>=0.34,<1",
  "tqdm>=4.66,<5"
]
ai-local = [
  "torch>=2.4",
  "diffusers>=0.39,<0.40",
  "transformers>=4.48,<5",
  "accelerate>=1.2",
  "huggingface-hub>=0.34,<1",
  "peft>=0.17",
  "safetensors>=0.8",
  "numpy>=1.26,<3"
]
ai-openai = [
  "openai>=1.0,<3",
  "keyring>=25,<27"
]
ai-gemini = [
  "google-genai>=1.0,<2",
  "keyring>=25,<27"
]
ai-cloud = [
  "openai>=1.0,<3",
  "google-genai>=1.0,<2",
  "keyring>=25,<27"
]
ai-training = [
  "torch>=2.4",
  "diffusers>=0.39,<0.40",
  "transformers>=4.48,<5",
  "accelerate>=1.2",
  "huggingface-hub>=0.34,<1",
  "peft>=0.17",
  "safetensors>=0.8",
  "numpy>=1.26,<3"
]
# Backward-compatible complete profile for development environments. The desktop
# dependency manager installs the scoped profiles above instead of this union.
ai = [
  "torch>=2.4",
  "diffusers>=0.39,<0.40",
  "transformers>=4.48,<5",
  "accelerate>=1.2",
  "huggingface-hub>=0.34,<1",
  "peft>=0.17",
  "safetensors>=0.8",
  "numpy>=1.26,<3",
  "openai>=1.0,<3",
  "google-genai>=1.0,<2",
  "keyring>=25,<27"
]
desktop-build = [
  "pyinstaller>=6.21,<7",
  "pip>=24,<26",
  "huggingface-hub>=0.34,<1",
  "safetensors>=0.8",
  "numpy>=1.26,<3",
  "openai>=1.0,<3",
  "google-genai>=1.0,<2",
  "keyring>=25,<27"
]

[project.scripts]
batikcraft-studio = "batikcraft_studio.__main__:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
batikcraft_studio = ["resources/*.ico"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 101
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.lint.per-file-ignores]
"notebooks/*.ipynb" = ["E401", "E402", "E501", "F401", "I001"]
"notebooks/kaggle_train_batik_style_any_object.ipynb" = ["E701", "E702", "B007"]
"src/batikcraft_studio/ai/batikbrew_generation.py" = ["E501", "F401", "I001"]
"src/batikcraft_studio/ai/batikbrew_generation_modes.py" = ["E501"]
"src/batikcraft_studio/ai/batikbrew_model_settings.py" = ["E501"]
"src/batikcraft_studio/ai/cloud_generation.py" = ["E501", "F401", "I001", "UP035"]
"src/batikcraft_studio/ai/cuda_runtime_guard_v042.py" = ["E501"]
"src/batikcraft_studio/ai/local_lora_training.py" = ["E501", "I001", "UP035", "UP037"]
"src/batikcraft_studio/ai/model_pack.py" = ["E501"]
"src/batikcraft_studio/ai/runtime_model_installer.py" = ["B007"]
"src/batikcraft_studio/ai/runtime_settings.py" = ["UP035"]
"src/batikcraft_studio/ai/torch_runtime_integrity.py" = ["E501"]
"src/batikcraft_studio/application/hotfix_session.py" = ["F401", "I001"]
"src/batikcraft_studio/application/hotfix_session_v2.py" = ["F401"]
"src/batikcraft_studio/application/process_session.py" = ["E501"]
"src/batikcraft_studio/assets/library.py" = ["F401"]
"src/batikcraft_studio/batikbrew_context_tool_app.py" = ["E501", "F401", "I001"]
"src/batikcraft_studio/dependency_bootstrap.py" = ["E501"]
"src/batikcraft_studio/dependency_bootstrap_v042.py" = ["E501"]
"src/batikcraft_studio/integrated_market_app.py" = ["E501", "I001"]
"src/batikcraft_studio/domain/project.py" = ["E501"]
"src/batikcraft_studio/i18n.py" = ["E501"]
"src/batikcraft_studio/persistence/nft_package.py" = ["E501"]
"src/batikcraft_studio/ui/ai_batik_background_dialog.py" = ["E501"]
"src/batikcraft_studio/ui/ai_runtime_settings_dialog.py" = ["E501", "UP035"]
"src/batikcraft_studio/ui/asset_pack_studio_dialog.py" = ["E501", "F821", "F841", "UP035"]
"src/batikcraft_studio/ui/batikbrew_output_mode_dialog.py" = ["E501"]
"src/batikcraft_studio/ui/batikbrew_request_dialog.py" = ["E501"]
"src/batikcraft_studio/ui/batikbrew_variation_dialog.py" = ["E501"]
"src/batikcraft_studio/ui/cloud_ai_settings_dialog.py" = ["I001"]
"src/batikcraft_studio/ui/compact_asset_editor.py" = ["E501"]
"src/batikcraft_studio/ui/context_tool_editor_hotfix_v2.py" = ["I001"]
"src/batikcraft_studio/ui/context_tool_editor_hotfix_v9.py" = ["I001"]
"src/batikcraft_studio/ui/context_tool_editor_hotfix_v11.py" = ["I001"]
"src/batikcraft_studio/ui/context_tool_editor_hotfix_v14.py" = ["I001"]
"src/batikcraft_studio/ui/context_tool_editor_hotfix_v15.py" = ["E501"]
"src/batikcraft_studio/ui/context_tool_editor_hotfixes.py" = ["E402", "E501", "F811", "I001"]
"src/batikcraft_studio/ui/dependency_center.py" = ["E501", "I001"]
"src/batikcraft_studio/ui/dependency_cuda_selection_patch.py" = ["E501"]
"src/batikcraft_studio/ui/dependency_manager_dialog.py" = ["E501", "I001"]
"src/batikcraft_studio/ui/gradient_dialog.py" = ["UP035"]
"src/batikcraft_studio/ui/image_set_dataset_dialog.py" = ["E501"]
"src/batikcraft_studio/ui/library_asset_nft_dialog.py" = ["E501"]
"src/batikcraft_studio/ui/local_training_dialog.py" = ["E501"]
"src/batikcraft_studio/ui/marketplace_mint_dialog.py" = ["E501", "UP035"]
"src/batikcraft_studio/ui/nft_economics_dialog.py" = ["F821", "F841"]
"src/batikcraft_studio/ui/object_tree_editor.py" = ["E501"]
"src/batikcraft_studio/ui/offline_ai_dialogs_global.py" = ["E501", "F401"]
"src/batikcraft_studio/ui/process_dialog.py" = ["E501"]
"src/batikcraft_studio/ui/tool_icons.py" = ["B007", "E501"]
"src/batikcraft_studio/ui/tool_windows.py" = ["E501"]
"src/batikcraft_studio/ui/viewport_editor.py" = ["E501", "F401"]
"src/batikcraft_studio/ui/web_marketplace_dialogs.py" = ["E501", "F401"]
"src/batikcraft_studio/ui/wysiwyg_transform_editor.py" = ["E501", "F401"]
"src/batikcraft_studio/web_bridge.py" = ["E501", "UP035", "UP037"]
"tests/test_ai_dependency_profiles.py" = ["F401", "F811"]
"tests/test_asset_pack_studio.py" = ["E501"]
"tests/test_dependency_center.py" = ["I001"]
"tests/test_sdxl_runtime_integrity.py" = ["F401"]
